instructions.Instructions.scala.error
Compilation error:
Instructions:4: error: not found: value downward
downward()
^Instructions:6: error: not found: value brushdown
brushdown() 
^