instructions.Instructions.scala.code
brushUp()
forward()
right()
downward()
left()
brushdown()